# simple-cacher

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  file_cache.rs  regex_matching.rs
src/: lib.rs
